bugfix: post cover image cropping

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -16,7 +16,10 @@
 .notion-page-content-inner {
   padding: 1rem;
   margin-top: -80px; /* Margin between PostHeader and the first block  */
+  margin-left: 2rem; 
+  max-width: 800px;
 }
+
 
 .notion-frame {
   padding: 0;
@@ -40,6 +43,7 @@
 .notion-aside {
   align-items: end;
   max-height: 70vh; /* Maximum height: 70% of viewport height */
+  max-width: 320px;
   overflow-y: auto; /* Enable vertical scrolling when content exceeds max height */
   position: sticky;
   top: 60px; /* PostHeader 하단에서 고정 - 필요에 따라 조정 가능 */
@@ -73,6 +77,7 @@
 .dark-mode .notion-aside::-webkit-scrollbar-thumb:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
+
 
 /* TOC 항목들의 줄바꿈 설정 - 클릭 기능 보존 */
 .notion-table-of-contents-item {
@@ -601,7 +606,9 @@
   color: var(--primary-text-color);
 }
 
-
+.notion-file-icon {
+  color: var(--primary-text-color);
+}
 
 /*
   --- Custom Default Background Styles ---
@@ -653,7 +660,7 @@ a.notion-table-of-contents-item,
 a.notion-table-of-contents-item:hover,
 a.notion-table-of-contents-item:focus,
 .notion-bookmark:hover,
-.notion-file:hover,
+.notion-file-link:hover,
 .notion-equation:hover,
 .notion-equation:focus-within {
   background-color: var(--hover-bg-color);
