--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding-right: 30rem;
+  padding-right: 34rem;
 }
 
 .mainContent {
